# chesnokuz

./: .$db.drawio.bkp  .$db.drawio.dtmp  README.md  TZ.md  db.drawio  pyproject.toml
alembic/versions/: 0f215efc3855_add_post_title_translation.py  357c5ac580f9_add_search_device_like.py  6a13f353e693_add_user_session.py  9d453307e6c4_add_post_title_translation.py  bdb1a2463720_add_posttag_m2m.py  e2c1d8115712_add_rest_tables.py  e3bafe71071e_add_post_table.py  ed692e5ecb91_add_deleted_email.py
app/: config.py  database.py  dependencies.py  exceptions.py  limiter.py  main.py  middlewares.py  models.py  schemas.py  utils.py
app/admin/: auth.py  settings.py  views.py
app/routers/: __init__.py  auth.py  category.py  lesson.py  posts.py  profession.py  tag.py  tmp.py  users.py  weather.py
app/routers/auth/: basic.py  gwt.py  register.py  router.py  session.py
app/schemas/: __init__.py  auth.py  common.py  schemas.py
static/: index.html  styles.css
